# autodl-cli

./: .gitignore  AGENTS.MD  README.md  pyproject.toml
docs/: autodl-pro-cli-design.md
src/autodl_cli/: __init__.py  __main__.py  app.py  config.py  constants.py  errors.py  output.py
src/autodl_cli/api/: __init__.py  client.py  models.py
src/autodl_cli/commands/: account.py  auth.py  config.py  image.py  init.py  instance.py
tests/: test_cli.py  test_client.py  test_config.py
