[project]
name = "autodl-cli"
version = "0.1.0"
description = "AutoDL Pro CLI"
readme = "README.md"
authors = [
    { name = "Hemilt0n", email = "akobama233@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autodl = "autodl_cli:main"
autodl-cli = "autodl_cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
