[project]
name = "autodl-cli"
version = "0.1.0"
description = "AutoDL Pro CLI"
readme = "README.md"
authors = [
    { name = "Hemilt0n", email = "akobama233@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
    "keyring>=25,<26",
    "platformdirs>=4,<5",
    "pydantic>=2,<3",
    "rich>=13,<15",
    "tomli-w>=1,<2",
    "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "respx>=0.22,<1",
    "ruff>=0.11,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "respx>=0.22,<1",
    "ruff>=0.11,<1",
]

[project.scripts]
autodl = "autodl_cli:main"
autodl-cli = "autodl_cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
